[package]
name = "gcplog-rs"
version = "0.2.0"
edition = "2021"
description = "A Rust tracing subscriber that emits logs as JSON for Google Cloud Logging"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "2.10"

[dev-dependencies]
futures = "0.3"
tiny_http = "0.12"
